--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "baseUrl": "src",
     "paths": {
       "*": ["./*"]
-    }
+    },
+    "types": [
+      "@types/react",
+      "@types/react-dom",
+      "@types/react-resizable"
+    ]
   },
   "include": ["src"]
 }
